@@ -4,8 +4,8 @@ CollectionType=6
 FormatType=0
 Name=Dark Horse Comics
 Name[ar]=دارك هورس كومكس
-Name[ca]=Comics Dark Horse
 Name[ca@valencia]=Comics Dark Horse
+Name[ca]=Comics Dark Horse
 Name[cs]=Dark Horse Comics
 Name[da]=Dark Horse Comics
 Name[de]=Dark-Horse-Comics
